--- a/css/index.css
+++ b/css/index.css
@@ -7,34 +7,57 @@ a {
     text-decoration: none;
 }
 
-.nav {
-    position: fixed;
+/* .swiper-container {
+    position: absolute;
     left: 0;
     top: 0;
-    margin-bottom: 36px;
+    margin-bottom: 16px;
     width: 100%;
     overflow: hidden;
-    overflow-x: scroll;
     white-space: nowrap;
     padding-bottom: 2px;
     background-color: rgb(218, 216, 216);
+} */
+
+#topNav {
+	width: 100%;
+	overflow: hidden;
+	font: 16px/32px hiragino sans gb, microsoft yahei, simsun;
+    border-bottom:1px solid #f8f8f8;
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
+}
+#topNav .swiper-slide {
+	padding: 0 5px;
+	letter-spacing:2px; 
+	text-align:center;
 }
 
-.nav-menu{
+/* .swiper-wrapper{
+    position: relative;
+    left: 0;
     width: 100%;
     line-height: 36px;
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
 }
 
-.navbox {
+.swiper-slide {
+    width: 40px;
+} */
+
+/* .navbox {
     margin-left: 15px;
-}
+} */
 
 .action {
     color: red;
 }
 
 .content {
-    padding-top: 38px;
+    /* padding-top: 38px; */
     display: flex;
     flex-direction: column;
 }
